--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -41,23 +41,11 @@
     overflow: hidden;
 }
 
-.footer-list::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px; /* Adjust the thickness of the underline */
-    background: #333; /* Adjust the color of the underline */
-    transform: scaleX(0);
-    transform-origin: bottom right;
-    transition: transform 0.3s ease-out; /* Adjust the duration of the underline animation */
+.footer-list:hover{
+    color: blue;
 }
 
-.footer-list:hover::after{
-    transform: scale(1);
-    transform-origin: bottom left;
-}
+
 
 .footer-content-heading{
     color: #0077b5;
@@ -134,17 +122,12 @@
     .footer-contact-wrapper {
         margin: 10px 0;
     }
+
+    .footer-copyright-wrapper{
+        height: 5vh;
+    }
+
+    .footer-copyright-terms-condition{
+        display: none;
+    }
 }
-
-
-
-
-
-/* footer Copyright Section */
-/* .footer-copyright-wrapper{
-
-}
-
-.footer-copyright-terms-condition{
-    cursor: pointer;
-} */
